// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests/fixtures.test.ts > ts-enum > literal-member 1`] = `
ScopeManager {
  variables: Array [
    ImplicitGlobalConstTypeVariable,
    Variable$2 {
      defs: Array [
        TSEnumNameDefinition$1 {
          name: Identifier<"Foo">,
          node: TSEnumDeclaration$1,
        },
      ],
      name: "Foo",
      references: Array [],
      isValueVariable: true,
      isTypeVariable: true,
    },
    Variable$3 {
      defs: Array [
        TSEnumNameDefinition$2 {
          name: Identifier<"Foo">,
          node: TSEnumDeclaration$1,
        },
      ],
      name: "Foo",
      references: Array [],
      isValueVariable: true,
      isTypeVariable: true,
    },
    Variable$4 {
      defs: Array [
        TSEnumMemberDefinition$3 {
          name: Literal$2,
          node: TSEnumMember$3,
        },
      ],
      name: "a",
      references: Array [],
      isValueVariable: true,
      isTypeVariable: true,
    },
  ],
  scopes: Array [
    GlobalScope$1 {
      block: Program$4,
      isStrict: false,
      references: Array [],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
        "Foo" => Variable$2,
      },
      type: "global",
      upper: null,
      variables: Array [
        ImplicitGlobalConstTypeVariable,
        Variable$2,
      ],
    },
    TSEnumScope$2 {
      block: TSEnumDeclaration$1,
      isStrict: true,
      references: Array [],
      set: Map {
        "Foo" => Variable$3,
        "a" => Variable$4,
      },
      type: "tsEnum",
      upper: GlobalScope$1,
      variables: Array [
        Variable$3,
        Variable$4,
      ],
    },
  ],
}
`;

exports[`ts-enum literal-member 1`] = `
ScopeManager {
  variables: [
    ImplicitGlobalConstTypeVariable,
    Variable$2 {
      defs: [
        TSEnumNameDefinition$1 {
          name: Identifier<"Foo">,
          node: TSEnumDeclaration$1,
        },
      ],
      name: "Foo",
      references: [],
      isValueVariable: true,
      isTypeVariable: true,
    },
    Variable$3 {
      defs: [
        TSEnumNameDefinition$2 {
          name: Identifier<"Foo">,
          node: TSEnumDeclaration$1,
        },
      ],
      name: "Foo",
      references: [],
      isValueVariable: true,
      isTypeVariable: true,
    },
    Variable$4 {
      defs: [
        TSEnumMemberDefinition$3 {
          name: Literal$2,
          node: TSEnumMember$3,
        },
      ],
      name: "a",
      references: [],
      isValueVariable: true,
      isTypeVariable: true,
    },
  ],
  scopes: [
    GlobalScope$1 {
      block: Program$4,
      isStrict: false,
      references: [],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
        "Foo" => Variable$2,
      },
      type: "global",
      upper: null,
      variables: [
        ImplicitGlobalConstTypeVariable,
        Variable$2,
      ],
    },
    TSEnumScope$2 {
      block: TSEnumDeclaration$1,
      isStrict: true,
      references: [],
      set: Map {
        "Foo" => Variable$3,
        "a" => Variable$4,
      },
      type: "tsEnum",
      upper: GlobalScope$1,
      variables: [
        Variable$3,
        Variable$4,
      ],
    },
  ],
}
`;
